# 260622-dj

./: .gitignore  main.py  pyproject.toml  requirements.txt
bank_app/: settings.py  urls.py
bank_app/client/: apps.py  forms.py  models.py  urls.py  views.py
bank_app/client/management/commands/: generate_clients.py
bank_app/client/migrations/: 0001_initial.py  0002_alter_client_created_at.py  0003_alter_client_created_at.py  0004_alter_client_created_at.py  0005_alter_client_created_at.py  0006_alter_client_created_at.py  0007_account.py  0008_client_user_alter_account_client.py  0009_payment.py  0010_address_client_addresses.py
bank_app/client/templates/: account_detail.html  base.html  base_auth.html  edit_client.html  home.html  list_accounts.html  login.html  partial_form_field.html
bank_app/manager/: apps.py  urls.py  views.py
bank_app/manager/templates/manager/: base.html  base_auth.html  home.html  login.html
docs/: 01-MODERN_INSTALL.md  02-FIRST_APP_CONFIG.md  03-SIMPLE-MODELS-VIEW-TEMPLATES.md  04-SIMPLE-FORMS.md  05-ONE-2-MANY-RELATION.md  06-CLASS_BASED_VIEW.md  07-BASIC-AUTH.md  08-FAKER-COMMAND.md  09-QUERYSETS.md  10-PARTIALS.md  MODERN_INSTALL.md
