[project]
name = "260622"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.6",
    "faker>=40.23.0",
    "ruff>=0.15.18",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=7.0.0",
    "pytest-django>=4.12.0",
]
prod = [
    "gunicorn>=26.0.0",
]
